# mipt2024s-3-koshelev-a-algo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
task_1/: CMakeLists.txt  README.md
task_1/src/list-lib/: CMakeLists.txt
task_1/src/list-lib/include/list-lib/: list.h
task_1/src/single-list-lib/: CMakeLists.txt
task_1/src/single-list-lib/include/single-list-lib/: list.h  single_list.h
task_2/: CMakeLists.txt  README.md
task_2/src/hash-lib/: CMakeLists.txt
task_2/src/hash-lib/include/hash-lib/: hash.h  hash0.h
task_3/: CMakeLists.txt  README.md
task_3/src/memory-lib/: CMakeLists.txt
task_3/src/memory-lib/include/memory-lib/: mm.h
task_4/: CMakeLists.txt  README.md
task_4/src/sort-lib/: CMakeLists.txt
task_4/src/sort-lib/include/sort-lib/: sort.h
task_4/src/sort-lib/src/: sort.cpp  sort.cxx
task_5/: CMakeLists.txt
task_5/src/avl-lib/: CMakeLists.txt
task_5/src/avl-lib/include/avl-lib/: avltree.h
task_6/: CMakeLists.txt  collect_data.py
task_6/profiler/: CMakeLists.txt
task_6/profiler/include/: binsearch.h  data_struct.h  generate.h
task_6/profiler/src/: data_struct.cpp  generate.cpp  profiler.cpp
test/: CMakeLists.txt  common_definitions.hxx  test_runner.cxx
test/runner/: test_runner.cxx
test/task_1/: test_data_manipulation.cxx  test_iterators.cxx
test/task_1/CDualLinkedList/: test_data_manipulation.cxx  test_data_manipulation.hxx  test_iterators.cxx  test_iterators.hxx
test/task_1/CSingleLinkedList/: test_data_manipulation.cxx  test_data_manipulation.hxx  test_iterators.cxx  test_iterators.hxx
test/task_2/CHash/: test_hash.cxx  test_hash.hxx
test/task_3/CMemoryManager/: test_mm_auto.cxx  test_mm_auto.hxx  test_mm_manual.cxx  test_mm_manual.hxx
test/task_4/: test_heap_sort.cxx  test_heap_sort.hxx  test_merge_sort.cxx  test_merge_sort.hxx
test/test-lib/: CMakeLists.txt
test/test-lib/include/test-lib/: common.h  common.hxx  tests.h  tests.hxx
test/test-lib/include/test-lib/data/: test_struct.h  test_struct_inverted.h
test/test-lib/include/test-lib/data/generators/: inline_generators.h  random_generator.h  repetitive_generator.h  sorted_generator.h
test/test-lib/include/test-lib/test/task_1/CDualLinkedList/: test_data_manipulation.h  test_data_manipulation.hxx  test_iterators.h  test_iterators.hxx
test/test-lib/include/test-lib/test/task_1/CSingleLinkedList/: test_data_manipulation.h  test_data_manipulation.hxx  test_iterators.h  test_iterators.hxx
test/test-lib/include/test-lib/test/task_2/CHash/: test_hash.h  test_hash.hxx  test_mm_hash.h
test/test-lib/include/test-lib/test/task_3/CMemoryManager/: test_mm_auto.h  test_mm_auto.hxx  test_mm_manual.h  test_mm_manual.hxx
test/test-lib/include/test-lib/test/task_4/: test_heap_sort.h  test_heap_sort.hxx  test_merge_sort.h  test_merge_sort.hxx  test_quick_sort.h
test/test-lib/include/test-lib/test/task_5/CAVLTree/: test_avl.h
test/test-lib/src/data/: test_struct.cpp  test_struct_inverted.cpp
