cmake_minimum_required(VERSION 3.5)

###############################################################################
## project definition #########################################################
###############################################################################

project(task_3)

###############################################################################
## dependencies ###############################################################
###############################################################################

add_subdirectory(
        ${CMAKE_CURRENT_SOURCE_DIR}/src/memory-lib
)