cmake_minimum_required(VERSION 3.5)

###############################################################################
## project definition #########################################################
###############################################################################

project(task_5)

###############################################################################
## dependencies ###############################################################
###############################################################################

add_subdirectory(
        ${CMAKE_CURRENT_SOURCE_DIR}/src/avl-lib
)
